bapo3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-app-deployment
  labels:
    app: ip-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ip-app
  template:
    metadata:
      labels:
        app: ip-app
    spec:
      containers:
      # IP container
      - name: ip-container
        image: ip:latest  # Your Docker image
        command: ["sh", "-c"]
        args: ["while true; do ./ip > /shared-data/ip.json; sleep 3; done"]
        volumeMounts:
        - name: shared-data
          mountPath: /shared-data
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
      
      # Nginx container
      - name: nginx-container
        image: nginx:1.29-alpine
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
      
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
