bapo3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-app-service
spec:
  selector:
    app: ip-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
